kubernetes/infrastructure/kong/admin-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kong-admin-basicauth
  namespace: kong
spec:
  basicAuth:
    secret: kong-admin-basicauth
