kubernetes/infrastructure/kong/manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager
  namespace: kong
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kong-kong-admin-basicauth@kubernetescrd

spec:
  ingressClassName: traefik

  rules:
    - host: admin.kong.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-manager
                port:
                  number: 8002
