kubernetes/infrastructure/kong/proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-proxy
  namespace: kong
spec:
  ingressClassName: traefik
  rules:
    - host: api.tomodachi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-proxy
                port:
                  number: 80
